--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -4,8 +4,18 @@
 <title>IMS</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <link href="css/main.css" rel="stylesheet" type="text/css" />
+ <script type="text/javascript" src="js/jquery/jquery-1.7.1.min.js"></script>
+    <script type="text/javascript" src="js/jquery/jquery-ui-1.8.17.custom.min.js"></script>
+     <link href="css/main.css" rel="stylesheet" type="text/css"/>
+    <link media="all" rel="stylesheet" href="css/jquery-ui-1.8.9.custom/jquery-ui-1.8.9.custom.css" type="text/css"/>
+          
 </head>
 <body>
+ <script type="text/javascript">
+             $(document).ready(function () {
+                alert("jjr");
+                });
+</script>
 <div id="header">
   <h1><a href="#">Friends Interior</a></h1>
   <ul id="menu">
